#34 Allow to pass compiler arguments to template compiler.